Add links of projects

--- a/index.html
+++ b/index.html
@@ -286,7 +286,11 @@
           <div class="project-card position-relative overflow-hidden">
             <img src="images/qr.png" class="img-fluid rounded" alt="Magic QR">
             <div class="project-overlay d-flex flex-column justify-content-center align-items-center text-center">
-              <h5 class="text-white">Magic QR</h5>
+              <h5 class="text-white">
+                <span>
+                  <a href="https://github.com/antick011/magic-qr.git" target="_blank" class="text-light text-decoration-none">Magic QR</a>
+                </span>
+              </h5>
               <p class="text-white">Smart QR system to filter & boost Google reviews.</p>
               <span class="badge bg-dark">PHP</span>
               <span class="badge bg-dark">MySQL</span>
@@ -300,7 +304,11 @@
           <div class="project-card position-relative overflow-hidden">
             <img src="images/kpl.png" class="img-fluid rounded" alt="KPL Auction Hub">
             <div class="project-overlay d-flex flex-column justify-content-center align-items-center text-center">
-              <h5 class="text-white">KPL Auction Hub</h5>
+              <h5 class="text-white">
+                <span>
+                  <a href="https://antick-kpl.onrender.com/" target="_blank" class="text-light text-decoration-none">KPL Auction HUB</a>
+                </span>
+              </h5>
               <p class="text-white">Cricket auction simulation built with Django.</p>
               <span class="badge bg-dark">Django</span>
               <span class="badge bg-dark">Python</span>
@@ -314,7 +322,11 @@
           <div class="project-card position-relative overflow-hidden">
             <img src="images/link.png" class="img-fluid rounded" alt="Fake Link Detector">
             <div class="project-overlay d-flex flex-column justify-content-center align-items-center text-center">
-              <h5 class="text-white">Fake Link Detector</h5>
+              <h5 class="text-white">
+                <span>
+                  <a href="https://github.com/antick011/Link-Checker.git" target="_blank" class="text-light text-decoration-none">Link Checker</a>
+                </span>
+              </h5>
               <p class="text-white">Detects phishing/fake links using NLP & classification.</p>
               <span class="badge bg-dark">Python</span>
               <span class="badge bg-dark">Scikit-learn</span>
@@ -328,7 +340,11 @@
           <div class="project-card position-relative overflow-hidden">
             <img src="images/rebook.png" class="img-fluid rounded" alt="Portfolio Website">
             <div class="project-overlay d-flex flex-column justify-content-center align-items-center text-center">
-              <h5 class="text-white">REBOOK</h5>
+              <h5 class="text-white">
+                <span>
+                  <a href="https://github.com/antick011/REBOOK.git" target="_blank" class="text-light text-decoration-none">REBOOK</a>
+                </span>
+              </h5>
               <p class="text-white">Website to Sell & Buy Used Books.</p>
               <span class="badge bg-dark">React</span>
               <span class="badge bg-dark">Tailwind CSS</span>
@@ -354,7 +370,14 @@
           <div class="card-body">
             <h5 class="card-title">Corporate Trainer</h5>
             <h6 class="card-subtitle mb-2 text-light">Webel Computer Training Institute, Konnagar Branch</h6>
-            <p class="card-text">Conducting technical training on C, C++, HTML, CSS, JavaScript, PHP, Python, Django, Laravel, and Generative AI. Guiding students through live projects and industry-based modules.</p>
+            <p class="card-text">
+              Conducting technical training on C, C++, HTML, CSS, JavaScript, PHP, Python, Django, Laravel, and Generative AI. 
+              Guiding students through live projects and industry-based modules.
+              <br>
+              <span style="font-size: 0.85rem;">
+                <a href="https://webelkonnagar.in/" target="_blank" class="text-decoration-none" style="color: #807e7e9f;">webelkonnagar.in</a>
+              </span>
+            </p>
           </div>
         </div>
       </div>
@@ -366,7 +389,12 @@
           <div class="card-body">
             <h5 class="card-title">Developer & Business Consultant</h5>
             <h6 class="card-subtitle mb-2 text-light">BEST CRM APP</h6>
-            <p class="card-text">Working on the development and optimization of CRM solutions. Involved in client consultations, feature planning, and enhancing business workflows using modern web technologies.</p>
+            <p class="card-text">Working on the development and optimization of CRM solutions. Involved in client consultations, feature planning, and enhancing business workflows using modern web technologies.
+              <br>
+              <span style="font-size: 0.85rem;">
+                <a href="https://bestcrmapp.in/" target="_blank" class="text-decoration-none" style="color: #807e7e9f;">bestcrmapp.in</a>
+              </span>
+            </p>
           </div>
         </div>
       </div>
