--- a/index-cv.html
+++ b/index-cv.html
@@ -106,49 +106,49 @@
     }
 
     @media print {
-  body {
-    background: white;
-    color: black;
-    font-size: 11.5px;
-    line-height: 1.2;
-    margin: 0;
-    padding: 0;
-  }
+      body {
+        background: white;
+        color: black;
+        font-size: 11.5px;
+        line-height: 1.2;
+        margin: 0;
+        padding: 0;
+      }
 
-  .container {
-    padding: 0;
-    margin: 0;
-  }
+      .container {
+        padding: 0;
+        margin: 0;
+      }
 
-  .section {
-    page-break-inside: avoid;
-    padding: 6px 10px;
-    margin-bottom: 8px;
-  }
+      .section {
+        page-break-inside: avoid;
+        padding: 6px 10px;
+        margin-bottom: 8px;
+      }
 
-  .buttons {
-    display: none;
-  }
+      .buttons {
+        display: none;
+      }
 
-  header {
-    margin-bottom: 8px;
-  }
+      header {
+        margin-bottom: 8px;
+      }
 
-  h1 {
-    font-size: 18px;
-  }
+      h1 {
+        font-size: 18px;
+      }
 
-  h2 {
-    font-size: 14px;
-    padding-bottom: 2px;
-    margin-top: 10px;
-    margin-bottom: 4px;
-  }
+      h2 {
+        font-size: 14px;
+        padding-bottom: 2px;
+        margin-top: 10px;
+        margin-bottom: 4px;
+      }
 
-  li {
-    margin-bottom: 4px;
-  }
-}
+      li {
+        margin-bottom: 4px;
+      }
+    }
   </style>
 </head>
 <body>
@@ -160,29 +160,62 @@
 
     <header>
       <h1>Antick Bhattacharjee</h1>
-      <p>Email: antick@tce-india.org | Phone: +91 8697853949 | Konnagar, Hooghly</p>
-      <p>LinkedIn: linkedin.com/in/antickbhattacharjee/ | GitHub: github.com/antick011</p>
+      <p>Email: antickbh15122001@gmail.com | Phone: +91 8697853949</p>
+      <p>GitHub: github.com/antick011 | Portfolio: antickbhattacharjee.netlify.app | LinkedIn: linkedin.com/in/antickbhattacharjee</p>
     </header>
 
     <div class="section">
       <h2>Professional Summary</h2>
-      <p>Enthusiastic Corporate Trainer and Tech Explorer with expertise in programming, web development, and emerging technologies. Passionate about empowering learners through hands-on training and real-world projects.</p>
+      <p>AI Developer & IT Faculty with 1+ year of experience in building and mentoring real-world projects in Artificial Intelligence, Machine Learning, Full-Stack Development, and Generative AI. Proven ability to design end-to-end AI systems—from data processing to deployment—while also training and guiding students in C, C++, Python, PHP, ML, DSA, and GenAI. Passionate about applying AI to solve corporate problems in document intelligence, healthcare, HR-tech, and enterprise automation.</p>
     </div>
 
     <div class="section">
-      <h2>Work Experience</h2>
+      <h2>Core Skills</h2>
+      <ul>
+        <li><strong>Programming & ML:</strong> Python, C, C++, PHP, SQL, TensorFlow, PyTorch, scikit-learn</li>
+        <li><strong>AI/LLMs:</strong> LangChain, Hugging Face, OpenAI API, RAG, NLP, Computer Vision</li>
+        <li><strong>Web/App Development:</strong> Django, Flask, Streamlit, React, Bootstrap</li>
+        <li><strong>Databases:</strong> MySQL, FAISS</li>
+        <li><strong>Tools:</strong> Git/GitHub, Jupyter, VS Code, Figma</li>
+        <li><strong>Soft Skills:</strong> Mentoring, Project Supervision, Corporate Training, Problem Solving</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>Projects</h2>
       <ul>
         <li>
-          <span class="job-title">Corporate Trainer – Webel Computer Training Institute</span>
-          <span class="date">Mar 2025 – Present</span>
+          <span class="job-title">AI Document Intelligence – Enterprise Q&A System (Flagship Project)</span>
+          <p>Built an AI-powered system to upload, summarize, and query PDFs (policies, contracts, manuals). Implemented RAG pipeline with LangChain + Hugging Face/OpenAI models for intelligent Q&A. Developed semantic search using FAISS vector database, improving retrieval accuracy by 40%. Deployed with Streamlit UI for enterprise-ready access.</p>
+          <p><strong>Tech:</strong> Python, LangChain, Hugging Face, FAISS, OpenAI API, Streamlit</p>
+        </li>
+        <li>
+          <span class="job-title">ECG Analyser – AI Healthcare Tool</span>
+          <p>Designed an AI-based ECG analyzer to generate medical-style diagnostic reports. Automated ECG signal plotting, analysis, and PDF report generation for quick diagnostic assistance.</p>
+          <p><strong>Tech:</strong> Python, Matplotlib, ReportLab</p>
+        </li>
+        <li>
+          <span class="job-title">CV Reader – AI Mock Interview Assistant</span>
+          <p>Developed a system to read resumes and conduct AI-powered mock interviews. Provided personalized strengths/weakness analysis for candidates. Applied Google Generative AI + Flask for intelligent feedback.</p>
+          <p><strong>Tech:</strong> Python, Flask, PyMuPDF, Google Generative AI</p>
+        </li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>Experience</h2>
+      <ul>
+        <li>
+          <span class="job-title">Faculty – Webel Computer Training Centre</span>
+          <span class="date">2024 – Present</span>
           <div class="clear"></div>
-          <p>Designed and delivered immersive training programs in PHP (MVC), Python, C, C++, and relevant frameworks.</p>
+          <p>Trained 100+ students in C, C++, Python, PHP, ML, DSA, Generative AI. Mentored students on final year and real-world AI projects (Fake Link Detector, Magic QR, Auction Hub, AI Q&A Systems). Conducted workshops on cyber safety, AI applications, and emerging technologies.</p>
         </li>
         <li>
           <span class="job-title">Operational Analyst – BEST CRM APP</span>
-          <span class="date">Apr 2025 – Present</span>
+          <span class="date">2024 – Present</span>
           <div class="clear"></div>
-          <p>Developed and maintained server-side applications, conducted client demos, and optimized workflows through data-driven analysis.</p>
+          <p>Worked on CRM optimization, automation workflows, and reporting. Coordinated with cross-functional teams to improve system efficiency.</p>
         </li>
       </ul>
     </div>
@@ -191,52 +224,22 @@
       <h2>Education</h2>
       <ul>
         <li>
-          <span class="job-title">B.Tech in Computer Science & Engineering</span>
+          <span class="job-title">B.Tech in Computer Science</span>
           <span class="date">2020 – 2024</span>
           <div class="clear"></div>
-          <p>Hooghly Engineering & Technology College | <strong>CGPA:</strong> 8.5</p>
-        </li>
-        <li>
-          <span class="job-title">Higher Secondary (12th)</span>
-          <span class="date">2018 – 2020</span>
-          <div class="clear"></div>
-          <p>Nabagram Vidyapith | <strong>Percentage:</strong> 72%</p>
+          <p>Maulana Abul Kalam Azad University of Technology – Hooghly Engineering and Technology College</p>
         </li>
       </ul>
     </div>
 
     <div class="section">
-      <h2>Skills</h2>
+      <h2>Achievements & Highlights</h2>
       <ul>
-        <li>HTML, CSS, JavaScript</li>
-        <li>Python (Django, Flask)</li>
-        <li>PHP (MVC, Laravel)</li>
-        <li>Machine Learning, Generative AI</li>
-      </ul>
-    </div>
-
-    <div class="section">
-      <h2>Languages</h2>
-      <ul>
-        <li>English – Native</li>
-        <li>Hindi – Native</li>
-      </ul>
-    </div>
-
-    <div class="section">
-      <h2>Certifications</h2>
-      <ul>
-        <li>Certified Python Developer – Webel Certification, 2025</li>
-        <li>Certificate in Java – Cursa, 2023</li>
-      </ul>
-    </div>
-
-    <div class="section">
-      <h2>Interest & Hobbies</h2>
-      <ul>
-        <li>Innovation & Creation</li>
-        <li>Problem Solving</li>
-        <li>Music and Art</li>
+        <li>Guided multiple real-world AI/ML projects to successful deployment.</li>
+        <li>Delivered corporate training sessions on Generative AI, DSA, and ML.</li>
+        <li>Deployed Scholarship Exam Portal for Hooghly Engineering and Technology College.</li>
+        <li>Successfully ran Cyber Awareness Program 2025 for Webel Computer Training Centre across 10+ schools.</li>
+        <li>Participated in SIH (Smart India Hackathon) 2021–2022.</li>
       </ul>
     </div>
   </div>
